--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,120 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copa America | Contacto</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Copa America | Contacto</title>
 
-    <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilos.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body >
+
+<body>
   <header>
-        <div class="containerlogo">
-            <img class="logo" src="../assets/icons/logo-copa-america-vertical.png" alt="logo">
-        </div> 
-        <div class="containerheader">
-            <h6>-Conmebol-</h6>
-            <h1>COPA AMERICA</h1>
-            <h5>USA 2024</h5> 
-        </div>    
+    <div class="containerlogo animate__animated animate__jello">
+      <img class="logo" src="../assets/icons/logo-copa-america-vertical.png" alt="logo">
+    </div>
+    <div class="containerheader animate__animated animate__flash">
+      <h6>-Conmebol-</h6>
+      <h1>COPA AMERICA</h1>
+      <h5>USA 2024</h5>
+    </div>
   </header>
   <nav class="navbar navbar-expand-md bg-color ">
-        <div class="container-fluid" >
-          <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Home.png" alt="icono home"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-menu" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="grupos.html">Grupos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="estadios.html">Estadios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="noticia.html">Noticia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Home.png" alt="icono home"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-menu" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="grupos.html">Grupos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="estadios.html">Estadios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="noticia.html">Noticia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
   <main class="main-contacto">
     <section id="contact">
       <div class="container-contact">
-          <h2>Contacto</h2>
-          <form id="contactForm">
-              <div class="form-group">
-                  <label for="name">Nombre:</label>
-                  <input type="text" id="name" name="name" required>
-              </div>
-              <div class="form-group">
-                  <label for="email">Email:</label>
-                  <input type="email" id="email" name="email" required>
-              </div>
-              <div class="form-group">
-                  <label for="message">Mensaje:</label>
-                  <textarea id="message" name="message" rows="5" required></textarea>
-              </div>
-              <button type="submit">Enviar Mensaje</button>
-          </form>
+        <h2>Contacto</h2>
+        <form id="contactForm">
+          <div class="form-group">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" placeholder="Alexi Gonzalez">
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="tuemail@gmail.com">
+          </div>
+          <div class="form-group">
+            <label for="message">Mensaje:</label>
+            <textarea id="message" name="message" rows="5" placeholder="Deja tu mensaje..."></textarea>
+          </div>
+          <button type="submit">Enviar</button>
+        </form>
       </div>
-  </section>
+    </section>
   </main>
-    <footer>
-        <div class="footer-container">
-            <div class="footer-logo">
-                <img src="../assets/icons/logo-copa-america-vertical.png" alt="Logo de la copa">
-            </div>
-            
-            <div class="footer-links">
-                <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
-                <ul class="textnegrita">
-                  <li><a href="../index.html">Home</a></li>
-                    <li><a href="grupos.html">Grupos</a></li>
-                    <li><a href="estadios.html">Estadios</a></li>
-                    <li><a href="noticia.html">Noticia</a></li>
-                </ul>
-            </div>
-            <div class="footer-contact">
-                <h3 class="subrayado-abajo textnegrita">Contacto</h3>
-               
-                <p>Dirección: 123 Calle Principal, Ciudad</p>
-                <p>Teléfono: (123) 456-7890</p>
-                <p>Email: info@empresa.com</p>
-                <p class="textnegrita">&copy; 2024 Copa America. Todos los derechos reservados.</p>
-            </div>
-        </div>
-        <div class="social-icons">
-          <h3 class="subrayado-arriba textnegrita">REDES</h3>
-          <ul>
-              <li><a href="https://www.facebook.com/Coderhouse"target="_blank"><img src="../assets/icons/facebook.png" alt="logo de facebook"></a></li>
-              <li><a href="https://www.instagram.com/coderhouse/"target="_blank"><img src="../assets/icons/instagram.png" alt="logo de instagram"></a></li>
-              <li><a href="https://x.com/coderhouse"target="_blank"><img src="../assets/icons/twitter.png" alt="logo de twitter"></a></li>
-              <li><a href="https://web.whatsapp.com/"target="_blank"><img src="../assets/icons/whatsapp.png" alt="logo de whatsapp"></a></li>
-              <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="../assets/icons/youtube.png" alt="logo de youtube"></a></li>
-          </ul>
-        </div>
-</footer>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="../assets/icons/logo-copa-america-vertical.png" alt="Logo de la copa">
+      </div>
 
+      <div class="footer-links">
+        <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
+        <ul class="textnegrita">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="grupos.html">Grupos</a></li>
+          <li><a href="estadios.html">Estadios</a></li>
+          <li><a href="noticia.html">Noticia</a></li>
+        </ul>
+      </div>
+      <div class="footer-contact">
+        <h3 class="subrayado-abajo textnegrita">Contacto</h3>
 
+        <p>Dirección: 123 Calle Principal, Ciudad</p>
+        <p>Teléfono: (123) 456-7890</p>
+        <p>Email: info@empresa.com</p>
+        <p class="textnegrita">&copy; 2024 Copa America. Todos los derechos reservados.</p>
+      </div>
+    </div>
+    <div class="social-icons">
+      <h3 class="subrayado-arriba textnegrita">REDES</h3>
+      <ul>
+        <li><a href="https://www.facebook.com/Coderhouse" target="_blank"><img src="../assets/icons/facebook.png"
+              alt="logo de facebook"></a></li>
+        <li><a href="https://www.instagram.com/coderhouse/" target="_blank"><img src="../assets/icons/instagram.png"
+              alt="logo de instagram"></a></li>
+        <li><a href="https://x.com/coderhouse" target="_blank"><img src="../assets/icons/twitter.png"
+              alt="logo de twitter"></a></li>
+        <li><a href="https://web.whatsapp.com/" target="_blank"><img src="../assets/icons/whatsapp.png"
+              alt="logo de whatsapp"></a></li>
+        <li><a href="https://www.youtube.com/@Coderhouse" target="_blank"><img src="../assets/icons/youtube.png"
+              alt="logo de youtube"></a></li>
+      </ul>
+    </div>
+  </footer>
 
-
-
-
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
