--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -1,98 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copa America | Noticia</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Copa America | Noticia</title>
 
-    <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../css/estilos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilos.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
+
 <body>
 
-    <header>
-        <div class="containerlogo">
-            <img class="logo" src="../assets/icons/logo-copa-america-vertical.png" alt="logo">
-        </div> 
-        <div class="containerheader">
-            <h6>-Conmebol-</h6>
-            <h1>COPA AMERICA</h1>
-            <h5>USA 2024</h5> 
-        </div>    
-    </header>
-    <nav class="navbar navbar-expand-md bg-color ">
-        <div class="container-fluid" >
-          <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Home.png" alt="icono home"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-menu" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="grupos.html">Grupos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="estadios.html">Estadios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Noticia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-
-
-
-
-
-
-
-    <footer>
-      <div class="footer-container">
-          <div class="footer-logo">
-              <img src="../assets/icons/logo-copa-america-vertical.png" alt="Logo de la copa">
-          </div>
-          
-          <div class="footer-links">
-              <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
-              <ul class="textnegrita">
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="grupos.html">Grupos</a></li>
-                  <li><a href="estadios.html">Estadios</a></li>
-                  <li><a href="contacto.html">Contacto</a></li>
-              </ul>
-          </div>
-          <div class="footer-contact">
-              <h3 class="subrayado-abajo textnegrita">Contacto</h3>
-             
-              <p>Dirección: 123 Calle Principal, Ciudad</p>
-              <p>Teléfono: (123) 456-7890</p>
-              <p>Email: info@empresa.com</p>
-              <p class="textnegrita">&copy; 2024 Copa America. Todos los derechos reservados.</p>
-          </div>
-      </div>
-      <div class="social-icons">
-        <h3 class="subrayado-arriba textnegrita">REDES</h3>
-        <ul>
-          <li><a href="https://www.facebook.com/Coderhouse"target="_blank"><img src="../assets/icons/facebook.png" alt="logo de facebook"></a></li>
-          <li><a href="https://www.instagram.com/coderhouse/"target="_blank"><img src="../assets/icons/instagram.png" alt="logo de instagram"></a></li>
-          <li><a href="https://x.com/coderhouse"target="_blank"><img src="../assets/icons/twitter.png" alt="logo de twitter"></a></li>
-          <li><a href="https://web.whatsapp.com/"target="_blank"><img src="../assets/icons/whatsapp.png" alt="logo de whatsapp"></a></li>
-          <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="../assets/icons/youtube.png" alt="logo de youtube"></a></li>
+  <header>
+    <div class="containerlogo animate__animated animate__jello">
+      <img class="logo" src="../assets/icons/logo-copa-america-vertical.png" alt="logo">
+    </div>
+    <div class="containerheader animate__animated animate__flash">
+      <h6>-Conmebol-</h6>
+      <h1>COPA AMERICA</h1>
+      <h5>USA 2024</h5>
+    </div>
+  </header>
+  <nav class="navbar navbar-expand-md bg-color ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html"><img src="../assets/icons/Home.png" alt="icono home"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse navbar-menu" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="grupos.html">Grupos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="estadios.html">Estadios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Noticia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li>
         </ul>
       </div>
+    </div>
+  </nav>
+
+  <main>
+    <section id="noticia">
+      <section class="noticia-1">
+        <article>
+          <img src="../assets/images/noticia/noticiaprincipalcolombiavsbrasil.jpg"
+            alt="Noticia principal Colombia vs Brasil">
+        </article>
+        <div>
+          <h3>
+            Colombia y Brasil llegan a las fases eliminatorias del Fútbol Femenino en París
+          </h3>
+          <p>
+            1 de Agosto de 2024
+          </p>
+        </div>
+      </section>
+
+      <section class="noticia-2">
+        <ul>
+          <li>
+            <div>
+              <img src="../assets/images/noticia/noticia2primera.jpg" alt="Argentina paraguay y estados unidos">
+            </div>
+            <div class="contenido-info">
+              <span>
+                COPA AMERICA
+              </span>
+              <h3>
+                Argentina, Paraguay y Estados Unidos siguen buscando medalla en los Juegos Olímpicos de París
+              </h3>
+              <p>
+                30 de Julio de 2024
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="../assets/images/noticia/Equipodetorneo.png" alt="Equipo de torneo">
+            </div>
+            <div class="contenido-info">
+              <span>
+                COPA AMERICA
+              </span>
+              <h3>
+                El equipo ideal de la CONMEBOL Copa América 2024™
+              </h3>
+              <p>
+                30 de Julio de 2024
+              </p>
+            </div>
+          </li>
+
+        </ul>
+      </section>
+      <aside class="aside-1">
+        <div>
+          <div class="title-equipos">
+            <h3>
+              Equipos
+            </h3>
+          </div>
+          <ul>
+            <li>
+              <div>
+                <img src="../assets/icons/Argentina.jpeg" alt="bandera de argentina">
+              </div>
+              <p>Argentina</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Bolivia.jpeg" alt="bandera de bolivia">
+              </div>
+              <p>Bolivia</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Brasil.jpeg" alt="bandera de brasil">
+              </div>
+              <p>Brasil</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Canada.jpeg" alt="bandera de canada">
+              </div>
+              <p>Canada</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Chile.jpeg" alt="bandera de chile">
+              </div>
+              <p>Chile</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Colombia.jpeg" alt="bandera de Colombia">
+              </div>
+              <p>Colombia</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Costa Rica.jpeg" alt="bandera de Costa Rica">
+              </div>
+              <p>Costa Rica</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Ecuador.jpeg" alt="bandera de Ecuador">
+              </div>
+              <p>Ecuador</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Jamaica.jpeg" alt="bandera de Jamaica">
+              </div>
+              <p>Jamaica</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/México.jpeg" alt="bandera de Mexico">
+              </div>
+              <p>Mexico</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Panamá.jpeg" alt="bandera de panama">
+              </div>
+              <p>Panama</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Paraguay.jpeg" alt="bandera de paraguay">
+              </div>
+              <p>Paraguay</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Peru.jpeg" alt="bandera de peru">
+              </div>
+              <p>Peru</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Uruguay.jpeg" alt="bandera de uruguay">
+              </div>
+              <p>Uruguay</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Usa.jpeg" alt="bandera de Usa">
+              </div>
+              <p>EEUU</p>
+            </li>
+            <li>
+              <div>
+                <img src="../assets/icons/Venezuela.jpeg" alt="bandera de venezuela">
+              </div>
+              <p>Venezuela</p>
+            </li>
+          </ul>
+        </div>
+      </aside>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-logo">
+        <img src="../assets/icons/logo-copa-america-vertical.png" alt="Logo de la copa">
+      </div>
+
+      <div class="footer-links">
+        <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
+        <ul class="textnegrita">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="grupos.html">Grupos</a></li>
+          <li><a href="estadios.html">Estadios</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="footer-contact">
+        <h3 class="subrayado-abajo textnegrita">Contacto</h3>
+
+        <p>Dirección: 123 Calle Principal, Ciudad</p>
+        <p>Teléfono: (123) 456-7890</p>
+        <p>Email: info@empresa.com</p>
+        <p class="textnegrita">&copy; 2024 Copa America. Todos los derechos reservados.</p>
+      </div>
+    </div>
+    <div class="social-icons">
+      <h3 class="subrayado-arriba textnegrita">REDES</h3>
+      <ul>
+        <li><a href="https://www.facebook.com/Coderhouse" target="_blank"><img src="../assets/icons/facebook.png"
+              alt="logo de facebook"></a></li>
+        <li><a href="https://www.instagram.com/coderhouse/" target="_blank"><img src="../assets/icons/instagram.png"
+              alt="logo de instagram"></a></li>
+        <li><a href="https://x.com/coderhouse" target="_blank"><img src="../assets/icons/twitter.png"
+              alt="logo de twitter"></a></li>
+        <li><a href="https://web.whatsapp.com/" target="_blank"><img src="../assets/icons/whatsapp.png"
+              alt="logo de whatsapp"></a></li>
+        <li><a href="https://www.youtube.com/@Coderhouse" target="_blank"><img src="../assets/icons/youtube.png"
+              alt="logo de youtube"></a></li>
+      </ul>
+    </div>
   </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
